--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BLE</string>
+    <string name="whether_disconnected_bluetooth">是否断开此蓝牙连接</string>
+    <string name="connected">已连接</string>
+    <string name="cancel">取消</string>
+    <string name="sure">确定</string>
 </resources>
